--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-async-handler": "^1.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "next-themes": "^0.4.4"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
