--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "next-themes": "^0.4.4"
+    "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
